fixed navbar layout and removed destination input box on mobile screen

--- a/client/src/component/slider/Slider.css
+++ b/client/src/component/slider/Slider.css
@@ -1,3 +1,13 @@
 .slider-container{
     z-index:1;
 }
+
+.slider{
+    height: 200px;
+}
+
+@media only screen and (max-width: 600px) {
+    .slider{
+        max-height: 100px;
+    }
+}
